--- a/grantera/test.html
+++ b/grantera/test.html
@@ -1,1 +1,16 @@
-<svg viewBox="0 0 100 100"><use xlink:href="chart.svg#Capa_1"></use></svg> 
+<!-- <svg viewBox="0 0 100 100"><use xlink:href="chart.svg#Capa_1"></use></svg> -->
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="css/brand.css">
+        <link rel="stylesheet" href="css/effects.css">
+
+
+        <title></title>
+    </head>
+    <body>
+        <div class="thisbrand magn">Spółka i S-ka</div>
+
+    </body>
+</html>
