--- a/strona2/index.html
+++ b/strona2/index.html
@@ -323,22 +323,21 @@
 <div class="container-fluid"><div id="carouselExampleControls2" class="carousel slide"  data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-
-      <!-- <h1 class="commentcarouselh1">Komentarze</h1> -->
-
-        <img src="images/slide1.png" style="width:100%;height:300px; opacity:0" alt="">
+        <div style="width:100%;height:300px; opacity:0"></div>
         <div class="commentbg"></div>
         <p class="comment" >"Super strona"</p>
         <p class="caption " >Zbigniew z Wrocławia</p>
 
     </div>
     <div class="carousel-item">
-        <img src="images/slide1.png" style="width:100%;opacity:0.10" alt="">
+      <div style="width:100%;height:300px; opacity:0"></div>
+        <div class="commentbg"></div>
         <p class="comment" >"Niezły biznes"</p>
         <p class="caption " >Zbigniew z Wrocławia</p>
     </div>
     <div class="carousel-item">
-        <img src="images/slide1.png" style="width:100%;opacity:0.10" alt="">
+      <div style="width:100%;height:300px; opacity:0"></div>
+      <div class="commentbg"></div>
         <p class="comment" >"Ciężkie jest życie"</p>
         <p class="caption " >Zbigniew z Wrocławia</p>
 
