--- a/bertrand/midflex.html
+++ b/bertrand/midflex.html
@@ -25,3 +25,36 @@
           </div>
         </div>
       </div>
+
+      <style>
+        .midicons {
+          display:flex;
+          justify-content: center;
+          padding:5px;
+        font-size:5rem;
+        flex-wrap:wrap;
+        overflow:hidden;
+
+        }
+
+        .midicons p {
+          margin:auto;
+        }
+
+
+        .midicons i {
+          margin:auto;
+        }
+
+
+
+
+
+        .iwrapper{
+          height:100px;
+          width:100px;
+        }
+        .midicons .title{
+          font-size:1.4rem;
+        }
+        </style>
