--- a/med/index.html
+++ b/med/index.html
@@ -332,13 +332,13 @@
     <div class="carousel-item">
       <div style="width:100%;height:300px; opacity:0"></div>
         <div class="commentbg"></div>
-        <p class="comment" >"Niezły biznes"</p>
+        <p class="comment" >"test"</p>
         <p class="caption " >Zbigniew z Wrocławia</p>
     </div>
     <div class="carousel-item">
       <div style="width:100%;height:300px; opacity:0"></div>
       <div class="commentbg"></div>
-        <p class="comment" >"Ciężkie jest życie"</p>
+        <p class="comment" >"test test"</p>
         <p class="caption " >Zbigniew z Wrocławia</p>
 
     </div>
